Correction contraste sur les entiers

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -213,7 +213,7 @@ section {
             .s1, .s2, .sh { color: #a31515; } /*Chaines*/
             .kr           { color: #af00db; } /*IF & ELSE*/
             .c, .cm       { color: #008000; } /*Commentaires*/
-            .mi           { color: #098658; } /*Entiers*/ 
+            .mi           { color: #01633F; } /*Entiers*/ 
         }
     }
     
